# Distributed-computing-systems-Lab3

./: A.cpp  B.cpp  C.cpp  CMakeLists.txt  Calculate.cpp  Calculate.h  D.cpp  README.md  data.h  result.txt
